--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="phaser.js" charset="utf-8"></script>
+    <script src="scenes/BootScene.js" charset="utf-8"></script>
     <script src="scenes/TitleScene.js" charset="utf-8"></script>
     <script src="scenes/PlayScene.js" charset="utf-8"></script>
     <script src="game.js" charset="utf-8"></script>
     <title>Platformer</title>
   </head>
   <body>
-    
+
   </body>
 </html>
