added High Scores screen from main menu

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <script src="scenes/BootScene.js" charset="utf-8"></script>
     <script src="scenes/TitleScene.js" charset="utf-8"></script>
     <script src="scenes/HowToPlayScene.js" charset="utf-8"></script>
+    <script src="scenes/TopScoresScene.js" charset="utf-8"></script>
     <script src="scenes/PlayScene.js" charset="utf-8"></script>
     <script src="scenes/GameOverScene.js" charset="utf-8"></script>
     <script src="game.js" charset="utf-8"></script>
